@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-21T16:08:49Z",
+  "timestamp" : "2023-07-22T08:08:17Z",
   "count_outdated" : 1267,
   "uniques_outdated" : 679,
-  "count" : 1294,
-  "uniques" : 695,
+  "count" : 1295,
+  "uniques" : 696,
   "clones" : [
     {
       "timestamp": "2023-07-08T00:00:00Z",
@@ -124,6 +124,15 @@
     },
     {
       "timestamp": "2023-07-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
