@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 3,
   "clones": [
     {
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2023-07-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-22T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
