@@ -1,3 +1,12 @@
+2023-07-22T08:08:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5629642246 # 1752
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
+* notice: last 14d: unq all: 3 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 679 1267 / 695 1294
+* notice: next accum: outdated-unq outdated-all / unq all: 679 1267 / 696 1295
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-22]
+
 2023-07-21T16:08:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5624334291 # 1750
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
